make Empty Object Proxy